crud-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
