ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "crud-app.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-app
            port:
              number: 8080
